@@ -1,3 +1,9 @@
+2002-01-19  Jim Meyering  <meyering@lucent.com>
+
+	* jm-macros.m4 (jm_MACROS): Use AC_FUNC_STRNLEN.
+	Remove useless quotes: DF_PROG="df".
+	* strnlen.m4: New file.
+
 2001-12-14  Jim Meyering  <meyering@lucent.com>
 
 	* jm-macros.m4 (jm_MACROS): Check for iswspace.
